--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "imagekitio-next": {
+      "next": "$next"
+    }
   }
 }
